# llamaIndex_agent

./: .gitignore  Cython-0.29.37-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.manylinux_2_24_x86_64.whl  pyproject.toml
llamaindex_agent/: basic_form.xlsx  create_form_querypipeline.py  customAgent.py  customSimpleAgent.py  global_conf.py  inference.py  notes.txt  pydantic_reproduce_bug.py  queryPipelineAgent.py  simple_ReAct_agent.py  simple_chat_agent.py  starter.py  utils.py
tests/: test_rag.py
