[tool.poetry]
name = "llamaindex-agent"
version = "0.1.0"
description = ""
authors = ["Ferda <fsuarezj@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
llama-index = "^0.9.43"
logging = "^0.4.9.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
