[tool.poetry]
name = "llamaindex-agent"
version = "0.1.0"
description = ""
authors = ["Ferda <fsuarezj@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
logging = "^0.4.9.6"
tiktoken = "^0.5.2"
transformers = "^4.37.2"
accelerate = "^0.26.1"
wikipedia = "^1.4.0"
pyvis = "^0.3.2"
pydantic = "^2.6.1"
llama-index-readers-wikipedia = "^0.1.2"
llama-index-llms-openai = "^0.1.1"
llama-index-llms-huggingface = "^0.1.1"
llama-index-embeddings-huggingface = "^0.1.1"
llama-index-agent-openai = "^0.1.1"
llama-index-embeddings-openai = "^0.1.1"
llama-index-program-openai = "^0.1.1"
llama-index = "^0.10.16"
llama-index-llms-llama-cpp = "^0.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
